--- a/styles/g3.css
+++ b/styles/g3.css
@@ -1,6 +1,10 @@
 * {
     font-family: 'Work Sans';
 }
+.container{ 
+     width: 80%;  
+     margin: auto;
+  } 
 
 /* navigation Styles */
 .main-nav {
@@ -129,7 +133,7 @@ color: #727272;
 margin-left: 85px;
 }
 .sec-contain{
-    width: 586px;
+    width: 590px;
     background: #FFFFFF;
 box-shadow: 0px 4px 30px rgba(0, 0, 0, 0.06);
 border-radius: 8px;
@@ -313,7 +317,7 @@ text-align: center;
     /* Features you will love & enjoy  */
     .section-info{
         display: flex;
-       flex-direction: column-reverse;
+       flex-direction: row-reverse;
        justify-content: center;
        flex-wrap: wrap;
        align-content: center;
@@ -325,8 +329,8 @@ text-align: center;
         display: none;
     }
     .section-container{
-        width: 86px;
-        margin-left: 130px;
+        width: 586px;
+        margin-left: 140px;
     }
     .sec-author{
         width:250px;
